--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,7 @@ h3 {
   min-height: 431px;
   float: left;
   margin-right: 40px;
+  background-color: #eeeeee;
   background-repeat: no-repeat;
   background-position: right;
 }
@@ -101,6 +102,7 @@ h3 {
 
 .slider-controls label {
   display: inline-block;
+  vertical-align: middle;
   width: 10px;
   height: 10px;
   margin: 0 7px;
@@ -280,7 +282,7 @@ h3 {
 .main-filter {
   width: 800px;
   float: right;
-  margin-bottom: 77px;
+  margin-bottom: 37px;
 }
 
 .main-filter ul{
@@ -302,16 +304,58 @@ article {
   width: 360px;
   display: inline-block;
   font-size: 0;
-  margin-right: 37px;
+  margin-right: 36px;
+  margin-bottom: 26px;
 }
 
 article:nth-child(2n) {
   margin-right: 0;
 }
 
+/*Немного подзабыл, как выбрать именно 2 последних элемента*/
+article:nth-child(5),
+article:nth-child(6) {
+  margin-bottom: 50px;
+}
 
+.cards-controls {
+  width: 360px;
+  min-height: 39px;
+  background-color: #e9e9e9;
+  border-top: 1px solid #e9e9e9;
+  border-radius: 4px;
+}
 
+.cards-controls label {
+  display: inline-block;
+  vertical-align: middle;
+  width: 6px;
+  height: 6px;
+  margin-top: 12px;
+  margin-right: 9px;
+  border: 4px solid white;
+  border-radius: 50%;
+  cursor: pointer;
+  background-color: white;
+}
 
+.cards-controls label:first-child {
+  margin-left: 16px;
+}
+
+.price-box {
+  display: none;
+}
+
+.pages-of-shop {
+  width: 460px;
+  min-height: 50px;
+  background-color: cyan;
+}
+
+.catalog-footer {
+  margin-top: 57px;
+}
 
 .clearfix::after {
   content: "";
