--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,6 @@ h3 {
 }
 
 a {
-  cursor: pointer;
   text-decoration: none;
   text-transform: uppercase;
 }
@@ -95,7 +94,16 @@ a {
   margin-right: 0;
 }
 
-.main-menu li::after {
+.main-menu a:hover {
+  color: #fb565a;
+}
+
+.main-menu a:active {
+  color: #000000;
+  opacity: 0.3;
+}
+
+.active-menu::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -103,36 +111,16 @@ a {
   background: #fb565a;
   bottom: 0;
   left: 0;
+}
+
+.active-menu:hover::after {
   display: none;
-}
-
-.main-menu li:active::after {
-  display: block;
-}
-
-.main-menu a:hover {
-  color: #fb565a;
 }
 
 .basket {
   position: relative;
   min-width: 180px;
   float: right;
-}
-
-.basket::after {
-  content: "";
-  position: absolute;
-  width: 112px;
-  height: 2px;
-  background: #fb565a;
-  bottom: 0;
-  left: 27px;
-  display: none;
-}
-
-.basket:active::after {
-  display: block;
 }
 
 .basket a {
@@ -155,6 +143,25 @@ a {
 
 .basket a:hover {
   color: #fb565a;
+}
+
+.basket a:active {
+  color: #000000;
+  opacity: 0.3;
+}
+
+.active-basket::after {
+  content: "";
+  position: absolute;
+  width: 112px;
+  height: 2px;
+  background: #fb565a;
+  bottom: 0;
+  left: 27px;
+}
+
+.active-basket:hover::after {
+  display: none;
 }
 
 .slider {
@@ -196,7 +203,7 @@ a {
 }
 
 .slide-description {
-  width: 515px;
+  width: 520px;
   float: left;
 }
 
@@ -236,7 +243,7 @@ a {
 }
 
 .slider .btn:active {
-  color: #e48789;
+  color: rgba(255, 255, 255, 0.3);
   background-color: #d7373b;
   border: 1px solid #d7373b;
   border-top: 1px solid #c13135;
@@ -252,6 +259,7 @@ a {
 }
 
 .slider-controls label {
+  position: relative;
   display: inline-block;
   vertical-align: middle;
   width: 10px;
@@ -267,10 +275,24 @@ a {
   margin-right: 0;
 }
 
-#btn-1:checked ~ .slider-controls label[for="btn-1"],
-#btn-2:checked ~ .slider-controls label[for="btn-2"],
-#btn-3:checked ~ .slider-controls label[for="btn-3"] {
-  background: url("../img/slider-btn.svg") no-repeat center;
+.slider-controls label::after {
+  content: "";
+  position: absolute;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  left: 3px;
+  top: 3px;
+  box-shadow: 0 0 0 2px #c1c1c1;
+  display: none;
+}
+
+
+#btn-1:checked ~ .slider-controls label[for="btn-1"]::after,
+#btn-2:checked ~ .slider-controls label[for="btn-2"]::after,
+#btn-3:checked ~ .slider-controls label[for="btn-3"]::after {
+  display: block;
 }
 
 #btn-1:checked ~ .slider-inner .slider-slides {
@@ -327,7 +349,7 @@ a {
 }
 
 .feature-1 .btn:active {
-  color: #e48789;
+  color: rgba(255, 255, 255, 0.3);
   background-color: #d7373b;
   border: 1px solid #d7373b;
   border-top: 1px solid #c13135;
@@ -350,7 +372,7 @@ a {
 }
 
 .feature-2 .btn:active {
-  color: #6fc498;
+  color: rgba(255, 255, 255, 0.3);
   background-color: #00aa62;
   border: 1px solid #00aa62;
   border-top: 1px solid #009958;
@@ -372,7 +394,7 @@ a {
 }
 
 .feature-3 .btn:active {
-  color: #edc47f;
+  color: rgba(255, 255, 255, 0.3);
   background-color: #e5a722;
   border: 1px solid #e5a722;
   border-top: 1px solid #ce961f;
@@ -481,8 +503,6 @@ a {
   float: left;
 }
 
-
-
 .portfolio a {
   width: 260px;
   margin-top: 45px;
@@ -532,6 +552,7 @@ a {
 }
 
 .map {
+  position: relative;
   width: 1440px;
   min-height: 416px;
   margin-left: auto;
@@ -583,7 +604,7 @@ a {
   border: 1px solid #e74246;
 }
 
-.address .btn:acti {
+.address .btn:active {
   color: #e48789;
   background-color: #d7373b;
   border: 1px solid #d7373b;
@@ -647,15 +668,27 @@ a {
 }
 
 .social-btn-vk {
-  background-image: url("../img/vk-icon.png")
+  background-image: url("../img/vk-icon.png");
+}
+
+.social-btn-vk:active {
+  background-image: url("../img/vk-icon-opacity.png")
 }
 
 .social-btn-fb {
-  background-image: url("../img/fb-icon.png")
+  background-image: url("../img/fb-icon.png");
+}
+
+.social-btn-fb:active {
+  background-image: url("../img/fb-icon-opacity.png");
 }
 
 .social-btn-inst {
-  background-image: url("../img/insta-icon.png")
+  background-image: url("../img/insta-icon.png");
+}
+
+.social-btn-inst:active {
+  background-image: url("../img/insta-icon-opacity.png");
 }
 
 .social-btn:hover {
@@ -666,6 +699,8 @@ a {
 .social-btn:active {
   background-color: #d7373b;
   border: 1px solid #d7373b;
+  border-top: 1px solid #c13135;
+  box-shadow: inset 0 4px 0 -1px #c13135;
 }
 
 /*Далее только вторая страница catalog.html*/
@@ -691,15 +726,284 @@ a {
 
 .action-form {
   width: 260px;
-  margin-top: 0;
+  margin-top: -3px;
   float: left;
   margin-right: 140px;
+}
+
+.action-form fieldset {
+  border: none;
+  padding: 0;
+  margin-left: 0;
+}
+
+.action-form legend {
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.range-filter {
+  width: 260px;
+  margin-bottom: 54px;
+}
+
+.range-filter legend {
+  margin-bottom: 48px;
+}
+
+.range-controls {
+  position: relative;
+  height: 41px;
+  margin-bottom: 14px;
+  padding-top: 39px;
+  padding-right: 20px;
+  padding-left: 20px;
+  border-radius: 5px;
+  background: #eeeeee;
+}
+
+.range-controls .scale {
+  height: 2px;
+  background: #d7dcde;
+}
+
+.range-controls .bar {
+  width: 70%;
+  height: 2px;
+  background: #00ca74;
+}
+
+.range-controls .toggle {
+  position: absolute;
+  top: 29px;
+  left: 0px;
+  width: 4px;
+  height: 4px;
+  border: 8px solid #ffffff;
+  border-radius: 50%;
+  background: #ababab;
+  box-shadow: 0 2px 1px 0 #cfcfcf;
+  cursor: pointer;
+}
+
+.range-controls .toggle-min {
+  left: 18px;
+}
+
+.range-controls .toggle-max {
+  left: 160px;
+}
+
+.price-controls {
+  font-size: 0;
+}
+
+.price-controls label {
+  display: inline-block;
+  vertical-align: middle;
+  width: 50%;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+
+.price-controls input {
+  font-family: 'Roboto', 'Arial', sans-serif;
+  font-size: 16px;
+  width: 58px;
+  margin-left: 10px;
+  padding: 8px 10px;
+  line-height: 22px;
+  text-align: center;
+  color: #283136;
+  border: none;
+  border-radius: 5px;
+  background: #eeeeee;
+}
+
+.price-controls input:focus {
+  outline: none;
+}
+
+.max-price {
+  text-align: right;
+}
+
+.form-grid {
+  margin-bottom: 27px;
+}
+
+.form-grid input[type="radio"] {
+  display: none;
+}
+
+.form-grid legend {
+  margin-left: 1px;
+  margin-bottom: 14px;
+}
+
+.form-grid ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.form-grid li {
+  margin-bottom: 16px;
+}
+
+.form-grid label {
+  position: relative;
+  display: block;
+  padding-left: 36px;
+  cursor: pointer;
+}
+
+.form-grid label::before {
+  content: "";
+  position: absolute;
+  width: 17px;
+  height: 17px;
+  top: 0;
+  left: 2px;
+  border: 3px solid #b8b8b8;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+input:checked ~ label::before {
+  background-color: #b8b8b8;
+  box-shadow: inset 0 0 0 5px #ffffff;
+}
+
+.form-grid label:hover {
+  color: #000000;
+}
+
+.form-grid label:hover::before {
+  border-color: #4d4d4d;
+}
+
+input:checked ~ label:hover::before {
+  background-color: #4d4d4d;
+}
+
+.form-features {
+  margin-bottom: 31px;
+}
+
+.form-features input[type="checkbox"] {
+  display: none;
+}
+
+.form-features legend {
+  margin-left: 1px;
+  margin-bottom: 14px;
+}
+
+.form-features ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.form-features li {
+  margin-bottom: 16px;
+}
+
+.form-features .nerds-checkbox {
+  position: relative;
+  padding-left: 37px;
+  cursor: pointer;
+}
+
+.form-features input[type=checkbox] + .checkbox-indicator {
+  position: absolute;
+  top: -1px;
+  left: 2px;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #b8b8b8;
+  border-radius: 5px;
+  z-index: 10;
+}
+
+.form-features input[type=checkbox]:checked + .checkbox-indicator::after {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 3px;
+  width: 21px;
+  height: 5px;
+  border: 2px solid #ffffff;
+  background-color: #b8b8b8;
+  transform: rotate(-45deg);
+  z-index: 20;
+}
+
+.form-features input[type=checkbox]:checked + .checkbox-indicator::before {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: 1px;
+  width: 12px;
+  height: 5px;
+  background-color: #b8b8b8;
+  transform: rotate(45deg);
+  z-index: 30;
+}
+
+.form-features .nerds-checkbox:hover {
+  color: #000000;
+}
+
+.form-features .nerds-checkbox:hover input[type=checkbox] + .checkbox-indicator {
+  border-color: #4d4d4d;
+}
+
+.form-features .nerds-checkbox:hover input[type=checkbox]:checked + .checkbox-indicator::before {
+  background-color: #4d4d4d;
+}
+
+.form-features .nerds-checkbox:hover input[type=checkbox]:checked + .checkbox-indicator::after {
+  background-color: #4d4d4d;
+}
+
+.action-form .btn {
+  padding: 16px 87px 14px 88px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: 500;
+  color: #000000;
+  text-transform: uppercase;
+  cursor: pointer;
+  background-color: #eeeeee;
+  border-color: #eeeeee;
+}
+
+.action-form .btn:hover {
+  background-color: #dfdfdf;
+  border-color: #dfdfdf;
+}
+
+.action-form .btn:active {
+  color: rgba(0, 0, 0, 0.3);
+  background-color: #d5d5d5;
+  border-color: #d5d5d5;
+  border-top: 3px solid #bfbfbf;
+  padding-top: 14px;
+}
+
+.action-form .btn:focus {
+  outline: none;
 }
 
 .main-filter {
   width: 800px;
   float: right;
-  margin-bottom: 50px;
+  margin-bottom: 48px;
 }
 
 .main-filter span {
@@ -722,7 +1026,8 @@ a {
 .main-filter li {
   display: inline-block;
   vertical-align: middle;
-  margin-left: 21px;
+  margin-top: 2px;
+  margin-left: 22px;
   font-size: 0;
 }
 
@@ -756,7 +1061,6 @@ a {
   font-size: 0;
   width: 20px;
   height: 20px;
-  background: black;
   margin-left: 9px;
 }
 
@@ -766,6 +1070,14 @@ a {
 
 .arrows a:last-child {
   margin-left: 0;
+}
+
+.down-arrow {
+  background: url("../img/icon-down.png") no-repeat center;
+}
+
+.up-arrow {
+  background: url("../img/icon-up.png") no-repeat center;
 }
 
 a.srt-active {
@@ -808,31 +1120,17 @@ article::before {
   background: url("../img/cards-header.png") no-repeat center;
   opacity: 0.12;
 }
-/*Селекторы от дива с кнопками в "шапке" карты*/
-/*.cards-controls {
-  width: 360px;
-  min-height: 39px;
-  background-color: #e9e9e9;
-  border-top: 1px solid #e9e9e9;
-  border-radius: 4px;
-}*/
-/*.cards-controls label {
-  display: inline-block;
-  vertical-align: middle;
-  width: 6px;
-  height: 6px;
-  margin-top: 12px;
-  margin-right: 9px;
-  border: 4px solid white;
-  border-radius: 50%;
-  cursor: pointer;
-  background-color: white;
-}*/
-/*.cards-controls label:first-child {
-  margin-left: 16px;
-}*/
+
+article:hover::before {
+  opacity: 1;
+}
+
+article:hover .price-box {
+  display: block;
+}
 
 .price-box {
+  display: none;
   position: absolute;
   bottom: 13px;
   left: 0;
@@ -908,13 +1206,23 @@ article::before {
 }
 
 .pgns a.btn:active {
-  color: #c1c1c1;
+  color: rgba(0, 0, 0, 0.3);
   background-color: #d5d5d5;
   border: 3px solid #d5d5d5;
   border-top: 3px solid #bfbfbf;
 }
 
 .pgns a.pgns-active {
+  border: 3px solid #dbdbdb;
+  background-color: #ffffff;
+}
+
+.pgns a.pgns-active:hover {
+  border: 3px solid #dbdbdb;
+  background-color: #ffffff;
+}
+
+.pgns a.pgns-active:active {
   border: 3px solid #dbdbdb;
   background-color: #ffffff;
 }
@@ -931,6 +1239,167 @@ article::before {
 
 .hidden-form{
   display: none;
+  position: absolute;
+  width: 760px;
+  min-height: 456px;
+  left: 50%;
+  bottom: -36px;
+  padding: 67px 100px;
+  margin-left: -500px;
+  background-color: #ffffff;
+  box-shadow: 0 20px 70px -9px #000101;
 }
 
+.hidden-form-close {
+  position: absolute;
+  float: right;
+  top: 77px;
+  right: 89px;
+  width: 22px;
+  height: 22px;
+  font-size: 0;
+  background: transparent;
+  border: 0;
+  cursor: pointer;
+  opacity: 0.3;
+}
+
+.hidden-form-close:hover {
+  opacity: 1;
+}
+
+.hidden-form-close:active {
+  opacity: 0.1;
+}
+
+.hidden-form-close:focus {
+  outline: none;
+}
+
+.hidden-form-close::before,
+.hidden-form-close::after {
+  content: "";
+  position: absolute;
+  top: 8px;
+  left: -2px;
+  width: 26px;
+  height: 6px;
+  background-color: #fb565a;
+  border-radius: 1px;
+}
+
+.hidden-form-close::before {
+  transform: rotate(45deg);
+}
+
+.hidden-form-close::after {
+  transform: rotate(-45deg);
+}
+
+.hidden-form b {
+  font-size: 45px;
+  line-height: 45px;
+  font-weight: 500;
+  display: block;
+  margin-left: -1px;
+  margin-bottom: 38px;
+}
+
+.hidden-form label {
+  display: inline-block;
+  margin-right: 317px;
+  font-style: 16px;
+  line-height: 18px;
+  font-weight: bold;
+}
+
+.hidden-form label:nth-child(2) {
+  margin-right: 100px;
+}
+
+.hidden-form label:nth-child(5) {
+  margin-bottom: 9px;
+}
+
+.hidden-form input[type="text"] {
+  display: inline-block;
+  width: 331px;
+  margin-top: 6px;
+  margin-right: 34px;
+  margin-bottom: 31px;
+  padding: 14px 13px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444444;
+  border: 2px solid #d7dcde;
+  border-radius: 3px;
+}
+
+.hidden-form input.your-mail {
+  margin-right: 0;
+}
+
+.hidden-form input[type="text"]:hover {
+  border-color: #b4b9bb;
+}
+
+.hidden-form input[type="text"]:focus {
+  outline: none;
+  border-color: #000000;
+}
+
+.hidden-form textarea {
+  display: block;
+  padding: 11px 13px;
+  width: 730px;
+  min-height: 92px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  color: #444444;
+  border: 2px solid #d7dcde;
+  border-radius: 3px;
+  resize: none;
+}
+
+.hidden-form textarea:hover {
+  border-color: #b4b9bb;
+}
+
+.hidden-form textarea:focus {
+  outline: none;
+  border-color: #000000;
+}
+
+.hidden-form form {
+  margin-bottom: 46px;
+}
+
+.hidden-form .btn {
+  padding: 17px 84px 15px 82px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 18px;
+  font-weight: normal;
+  color: #ffffff;
+  text-transform: uppercase;
+  cursor: pointer;
+}
+
+.hidden-form .btn:hover {
+  background-color: #e74246;
+}
+
+.hidden-form .btn:active {
+  color: rgba(255, 255, 255, 0.3);
+  background-color: #d7373b;
+  border: 1px solid #d7373b;
+  border-top: 1px solid #c13135;
+  box-shadow: inset 0 4px 0 -1px #c13135;
+}
+
+.hidden-form .btn:focus{
+  outline: none;
+}
 /** {outline: 1px solid green;}*/
