--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@ a {
   margin-right: auto;
 }
 
+header {
+  min-width: 1200px;
+}
+
 .shop-header {
   padding-top: 50px;
   margin-bottom: 80px;
@@ -239,8 +243,8 @@ a {
 
 .slider .btn {
   float: left;
-  width: 133px;
-  padding: 13px 52px 11px 53px;
+  width: 138px;
+  padding: 13px 47px 11px 53px;
 }
 
 .slider .btn:hover {
@@ -294,6 +298,9 @@ a {
   display: none;
 }
 
+/*Критерий рассматривает именно запрет на стилизацию через id,
+но использовать этот атрибут для связывания label и элементов форм не считается ошибкой.
+Также не считается ошибкой использование этого атрибута для реализации функциональности, например, в слайдере.*/
 
 #btn-1:checked ~ .slider-controls label[for="btn-1"]::after,
 #btn-2:checked ~ .slider-controls label[for="btn-2"]::after,
@@ -525,6 +532,7 @@ a {
 
 .portfolio {
   position: relative;
+  font-size: 0;
 }
 
 .portfolio::before,
@@ -549,7 +557,7 @@ a {
   position: relative;
   width: 260px;
   margin-top: 45px;
-  margin-right: 36px;
+  margin-right: 40px;
   display: inline-block;
   vertical-align: middle;
 }
@@ -624,6 +632,10 @@ a {
   background-repeat: no-repeat;
 }
 
+.map iframe {
+  width: 100%;
+}
+
 .address {
   position: absolute;
   z-index: 20;
@@ -664,11 +676,12 @@ a {
 .address .btn {
   display: block;
   float: left;
+  width: 132px;
   margin-top: 34px;
   padding-left: 44px;
   padding-top: 13px;
   padding-bottom: 11px;
-  padding-right: 43px;
+  padding-right: 41px;
 }
 
 .address .btn:hover {
@@ -784,14 +797,14 @@ a {
 }
 
 .catalog-header .nerds-logo {
+  background-color: ##eeeeee;
   margin-bottom: 41px;
 }
 
-.leader {
-  text-align: center;
-}
-
-.leader h1 {
+.catalog-header h1 {
+  float: left;
+  width: 800px;
+  padding: 0 216px;
   margin-bottom: 108px;
 }
 
@@ -929,6 +942,7 @@ a {
   display: block;
   padding-left: 36px;
   cursor: pointer;
+  color: #283136;
 }
 
 .form-grid label::before {
@@ -956,8 +970,24 @@ input:checked ~ label::before {
   border-color: #4d4d4d;
 }
 
-input:checked ~ label:hover::before {
+.form-grid input:checked ~ label:hover::before {
   background-color: #4d4d4d;
+}
+
+.form-grid input:disabled ~ label {
+  opacity: 0.3;
+}
+
+.form-grid input:disabled ~ label:hover {
+  color: #283136;
+}
+
+.form-grid input:disabled ~ label:hover::before {
+  border-color: #b8b8b8;
+}
+
+.form-grid input:checked:disabled ~ label:hover::before {
+  background-color: #b8b8b8;
 }
 
 .form-features {
@@ -983,13 +1013,17 @@ input:checked ~ label:hover::before {
   margin-bottom: 16px;
 }
 
+.form-features label {
+  color: #283136;
+}
+
 .form-features .nerds-checkbox {
   position: relative;
   padding-left: 37px;
   cursor: pointer;
 }
 
-.form-features input[type=checkbox] + .checkbox-indicator {
+.form-features .checkbox-indicator {
   position: absolute;
   top: -1px;
   left: 2px;
@@ -1000,7 +1034,8 @@ input:checked ~ label:hover::before {
   z-index: 10;
 }
 
-.form-features input[type=checkbox]:checked + .checkbox-indicator::after {
+.form-features .checkbox-indicator::after {
+  display: none;
   content: "";
   position: absolute;
   top: 2px;
@@ -1013,7 +1048,8 @@ input:checked ~ label:hover::before {
   z-index: 20;
 }
 
-.form-features input[type=checkbox]:checked + .checkbox-indicator::before {
+.form-features .checkbox-indicator::before {
+  display: none;
   content: "";
   position: absolute;
   top: 8px;
@@ -1025,20 +1061,39 @@ input:checked ~ label:hover::before {
   z-index: 30;
 }
 
+.form-features input[type=checkbox]:checked ~ .nerds-checkbox .checkbox-indicator::after,
+.form-features input[type=checkbox]:checked ~ .nerds-checkbox .checkbox-indicator::before{
+  display: block;
+}
+
 .form-features .nerds-checkbox:hover {
   color: #000000;
 }
 
-.form-features .nerds-checkbox:hover input[type=checkbox] + .checkbox-indicator {
+.form-features .nerds-checkbox:hover .checkbox-indicator {
   border-color: #4d4d4d;
 }
 
-.form-features .nerds-checkbox:hover input[type=checkbox]:checked + .checkbox-indicator::before {
+.form-features .nerds-checkbox:hover .checkbox-indicator::after,
+.form-features .nerds-checkbox:hover .checkbox-indicator::before {
   background-color: #4d4d4d;
 }
 
-.form-features .nerds-checkbox:hover input[type=checkbox]:checked + .checkbox-indicator::after {
-  background-color: #4d4d4d;
+input[type=checkbox]:disabled ~ .nerds-checkbox {
+  opacity: 0.3;
+}
+
+input[type=checkbox]:disabled ~ .nerds-checkbox:hover {
+  color: #283136;
+}
+
+input[type=checkbox]:disabled ~ .nerds-checkbox:hover .checkbox-indicator {
+  border-color: #b8b8b8;
+}
+
+input[type=checkbox]:disabled ~ .nerds-checkbox:hover .checkbox-indicator::after,
+input[type=checkbox]:disabled ~ .nerds-checkbox:hover .checkbox-indicator::before {
+  background-color: #b8b8b8;
 }
 
 .action-form .btn {
@@ -1199,7 +1254,7 @@ article::before {
   left: 0;
   width: 360px;
   height: 40px;
-  background: url("../img/cards-header.png") no-repeat center;
+  background: #4d4d4d url("../img/cards-header.png") no-repeat center;
   opacity: 0.12;
 }
 
